# skoll

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  WolfIDE_research_and_blueprint.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  redocly.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  phase-task.yml
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_initial_schema.py
backend/src/skoll/: __init__.py  app.py  config.py  errors.py  log.py
backend/src/skoll/agent/: __init__.py  loop.py  streaming.py
backend/src/skoll/agent/tools/: __init__.py  analyze_corpus.py  analyze_image.py  apply_diff.py  codebase_search.py  git_commit.py  git_diff.py  read_file.py  read_url.py  registry.py  run_bash.py  web_search.py  write_file.py
backend/src/skoll/api/: __init__.py  chat.py  files.py  health.py  sessions.py  tools.py
backend/src/skoll/db/: __init__.py  engine.py  models.py  repo.py
backend/src/skoll/lm/: __init__.py  client.py  reasoning.py
backend/src/skoll/rag/: __init__.py  chunking.py  embeddings.py  extractors.py  retrieval.py
backend/src/skoll/sandbox/: __init__.py  session.py
backend/src/skoll/search/: __init__.py  duckduckgo.py  jina_reader.py  searxng.py  trafilatura_extract.py
backend/src/skoll/security/: __init__.py  path.py  preflight.py  secrets.py  untrusted.py
backend/tests/: conftest.py  test_apply_diff.py  test_chat_nonstream.py  test_codebase_search.py  test_config.py  test_db_models.py  test_db_repo.py  test_embeddings.py  test_extractors.py  test_health.py  test_lm_client.py  test_loop.py  test_path.py  test_preflight.py  test_rag_chunking.py  test_read_file.py  test_read_url.py  test_reasoning.py  test_registry.py  test_retrieval.py  test_run_bash.py  test_sandbox.py  test_search.py  test_secrets.py  test_sessions_sse.py  test_smoke.py  test_streaming.py  test_untrusted.py  test_web_search.py  test_write_file.py
backend/tests/fixtures/lm_studio/: README.md  chat_simple_nontool.json  error_400_invalid_model.json  models_list.json  models_list_openai.json
backend/tests/fixtures/rag/: sample.html  sample.md  sample.txt
contracts/: events.yaml  openapi.yaml  tool-descriptor.schema.json
contracts/tools/: README.md  analyze_corpus.json  analyze_image.json  apply_diff.json  codebase_search.json  git_commit.json  git_diff.json  read_file.json  read_url.json  run_bash.json  web_search.json  write_file.json
db/: schema.sql
docs/: ARCHITECTURE.md  DEVELOPMENT.md  ISSUES.md  ROADMAP.md  TESTED_MODELS.md  THREAT_MODEL.md
frontend/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ChatPane.test.tsx  ChatPane.tsx  EditorPane.test.tsx  EditorPane.tsx
frontend/src/lib/: sse.ts
frontend/src/lib/api/: client.ts  types.ts
frontend/src/stores/: chat.ts  session.ts
frontend/src/styles/: index.css
frontend/src/test/: setup.tsx  smoke.test.tsx
prompts/: agent_system.md  edit_format.md  reasoning_off_template.md  tool_call_recovery.md  untrusted_content_wrapper.md
sandbox/: Dockerfile  README.md  container-init.sh  entrypoint.py  init-network.sh  network-policy.md  requirements-sandbox.txt  seccomp.json
sandbox/searxng/: settings.yml
