# Root pyproject — monorepo dev tools only.
# Backend deps live in backend/pyproject.toml.

[project]
name = "skoll-monorepo"
version = "0.0.0"
description = "Skoll — local-first agentic web IDE for LM Studio"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
  "vendor",
  ".venv",
  "backend/src/skoll/contracts/_generated",
]

[tool.ruff.lint]
select = [
  "E", "W",       # pycodestyle
  "F",            # pyflakes
  "I",            # isort
  "B",            # bugbear
  "C4",           # comprehensions
  "UP",           # pyupgrade
  "S",            # bandit-lite
  "ANN",          # flake8-annotations (type hints required)
  "ASYNC",        # async patterns
  "RUF",          # ruff-specific
]
ignore = [
  "S101",         # assert allowed in tests (we override per-file)
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = ["S101", "ANN"]
"examples/**" = ["ANN"]

[tool.ruff.lint.flake8-annotations]
# `*args: Any` / `**kwargs: Any` are legitimate passthroughs (e.g. to the LM Studio SDK).
allow-star-arg-any = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
files = ["backend/src"]
exclude = ["vendor/", "backend/src/skoll/contracts/_generated/"]

[[tool.mypy.overrides]]
module = ["faiss.*", "trafilatura.*", "duckduckgo_search.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["backend/tests", "vendor"]
skips = ["B101"]  # assert in tests
