[project]
name = "skoll"
version = "0.1.0a0"
description = "Skoll backend — FastAPI + LM Studio agent loop"
authors = [{name = "Skoll contributors"}]
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.12"
readme = "../README.md"

dependencies = [
  # Web framework + ASGI
  "fastapi>=0.135,<0.140",
  "uvicorn[standard]>=0.32,<1.0",
  "sse-starlette>=2.1.3,<3.0",         # SSE helper; FastAPI 0.135 has built-in but we keep this as fallback

  # HTTP client (async)
  "httpx>=0.27,<0.29",

  # Pydantic v2
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.5,<3.0",

  # DB
  "aiosqlite>=0.20,<0.21",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "alembic>=1.13,<2.0",

  # Logging
  "structlog>=24.4,<25.0",

  # RAG / FAISS
  "faiss-cpu>=1.8,<2.0",
  "numpy>=1.26,<3.0",

  # File extractors (adapted from ForestOptiLM)
  "trafilatura>=1.12,<2.0",
  "pypdf>=6.7.2,<7.0",          # 4.x had many CVEs (CVE-2025-55197 … CVE-2026-27628)
  "python-docx>=1.1,<2.0",
  "openpyxl>=3.1,<4.0",
  "beautifulsoup4>=4.12,<5.0",
  "lxml>=6.1,<7.0",             # 5.x flagged by PYSEC-2026-87

  # Search
  "duckduckgo-search>=6.2,<7.0",

  # Misc
  "tenacity>=9.0,<10.0",
  "tiktoken>=0.7,<1.0",                # token counting; works for most modern models
  "pyyaml>=6.0,<7.0",
  "jsonschema>=4.23,<5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10.0",
  "pytest-asyncio>=0.24,<1.0",
  "pytest-cov>=5.0,<7.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.11,<2.0",
  "bandit[toml]>=1.7,<2.0",
  "httpx>=0.27",                       # also for TestClient
  "respx>=0.21,<1.0",                  # mock httpx in tests
  "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skoll"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "integration: requires running LM Studio (skipped in CI by default)",
  "slow: long-running tests",
]
testpaths = ["tests"]

# ruff / mypy / bandit config inherits from root pyproject.toml
